[ios] Dismiss Clear Browsing Data before Dismissing History Navigation Controller

If Clear Browsing Data is presented when History attempts to dismiss itself, nothing will happen. Need to dismiss Clear Browsing Data First.

Video: https://drive.google.com/open?id=1KUKsgv8OSQc_1301ff2XMgK2_hi6dd1-

Bug: 867329

Change-Id: I1cd5f242ef410267ed5d4ab0e006884a3288eafe
Reviewed-on: https://chromium-review.googlesource.com/1150620
Commit-Queue: Chris Lu <thegreenfrog@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578544}
Former-commit-id: 6b08da93c186a16cdf6e2bf59044af69c96c7d94